[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extents"

version = "0.1.0"

authors = [
    {name="Michael Frank", email="michaelfrank@swapp.ai"},
]

maintainers = [
    {name="Michael Frank", email="michaelfrank@swapp.ai"}, 
]

description = "An intervals library implemented in pure python, meant to be a drop-in replacment for the pyinterval library."

readme = "README.md"

license = {file = "LICENSE"}

keywords = ["interval", "intervals"]

classifiers = [
    "Programming Language :: Python",
]

requires-python = ">= 3.7"

dependencies = [
    "more-itertools",
]

[project.urls]
Homepage = "https://github.com/swapp-ai/extents"
Documentation = "https://github.com/swapp-ai/extents/blob/main/README.md"
Repository = "https://github.com/swapp-ai/extents.git"
Issues = "https://github.com/swapp-ai/extents/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
tests = ["pytest"]
